src/objects/PSA_Triggers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Disable_pse_Proj_c_AI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable_pse_Proj_c_AI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_pse_Proj_c_AU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable_pse_Proj_c_AU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_pse_Proj_c_BI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the before insert code of the project trigger handler</description>
        <label>Disable_pse_Proj_c_BI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_pse_Proj_c_BU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable_pse_Proj_c_BU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_pse_Timecard_Header_c_BI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable pse_Timecard_Header_c BI</label>
        <type>Checkbox</type>
    </fields>
    <label>PSA Triggers</label>
</CustomObject>